--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,9 +30,9 @@ services:
     # The second port must be the same as WHATSAPP_API_PORT or 3000 by default
     # Consider using the same port for simplicity
     ports:
-      - '3000:3000/tcp'
+      #- '3000:3000/tcp'
       # NOTE: if you're using HTTP, you can use the following port mapping
-      #- '80:3000/tcp'
+      - '80:3000/tcp'
       # NOTE: if you're using HTTPS, you can use the following port mapping
       #- '443:3000/tcp'
 
@@ -57,8 +57,8 @@ services:
       # If you know the right URL, you can use it here.
       # Use any port in WHATSAPP_API_PORT and domain in WHATSAPP_API_HOSTNAME
       # https://waha.devlike.pro/docs/how-to/config/#common
-      #- WHATSAPP_API_PORT=3000
-      #- WHATSAPP_API_HOSTNAME=localhost
+      - WHATSAPP_API_PORT=3000
+      - WHATSAPP_API_HOSTNAME=localhost
 
       #
       # Security
