--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,9 +32,9 @@ services:
     ports:
       #- '3000:3000/tcp'
       # NOTE: if you're using HTTP, you can use the following port mapping
-      - '84:3000/tcp'
+      # - '84:3000/tcp'
       # NOTE: if you're using HTTPS, you can use the following port mapping
-      #- '443:3000/tcp'
+      - '80:3344/tcp'
 
     volumes:
       # Store sessions in the .sessions folder (comment it if you're using MongoDB)
@@ -57,7 +57,7 @@ services:
       # If you know the right URL, you can use it here.
       # Use any port in WHATSAPP_API_PORT and domain in WHATSAPP_API_HOSTNAME
       # https://waha.devlike.pro/docs/how-to/config/#common
-      - WHATSAPP_API_PORT=3000
+      - WHATSAPP_API_PORT=3344
       - WHATSAPP_API_HOSTNAME=localhost
 
       #
@@ -221,22 +221,22 @@ services:
   # NOTE: Only if you're using S3 to save media files
   # https://waha.devlike.pro/docs/how-to/storages/#media---s3
   # Comment this block if you're using AWS S3
-  minio:
-    image: quay.io/minio/minio
-    container_name: minio
-    restart: always
-    ports:
-      - '9000:9000'
-      - '9001:9001'
-    environment:
-      MINIO_REGION: 'eu-west-2'
-      MINIO_ROOT_USER: 'minioadmin'
-      MINIO_ROOT_PASSWORD: 'minioadmin'
-    volumes:
-      - minio_data:/data
-    command: server /data --console-address ":9001"
+  # minio:
+  #   image: quay.io/minio/minio
+  #   container_name: minio
+  #   restart: always
+  #   ports:
+  #     - '9000:9000'
+  #     - '9001:9001'
+  #   environment:
+  #     MINIO_REGION: 'eu-west-2'
+  #     MINIO_ROOT_USER: 'minioadmin'
+  #     MINIO_ROOT_PASSWORD: 'minioadmin'
+  #   volumes:
+  #     - minio_data:/data
+  #   command: server /data --console-address ":9001"
 
 volumes:
   # NOTE: Only if you're using MongoDB
   mongodb_data: {}
-  minio_data: {}
+  # minio_data: {}
